[workspace]
resolver = "2"

members = ["price-oracle"]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace.dependencies.soroban-sdk]
version = "20.0.0-rc2"

[workspace.dependencies.hex]
version = "0.4.3"

[workspace.dependencies.stellar-strkey]
version = "0.0.7"