[package]
name = "se-price-oracle-plus"
version = "1.3.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
shared = { path = "../shared" }
soroban-sdk = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[build-dependencies]
soroban-sdk = { workspace = true }
stellar-strkey = { workspace = true }