[package]
name = "reflector-oracle"
version = "1.7.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[build-dependencies]
soroban-sdk = { workspace = true }
stellar-strkey = { workspace = true }