[package]
name = "reflector-oracle"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[build-dependencies]
soroban-sdk = { workspace = true }
stellar-strkey = { workspace = true }